--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,8 +5,10 @@
     <string name="action_settings">Settings</string>
     <string name="error">ERROR</string>
     <string name="event_name">Event Name</string>
-    <string name="begins">"Begins"</string>
-    <string name="ends">"Ends"</string>
+    <string name="starts">"Starts:"</string>
+    <string name="ends">"Ends:"</string>
+    <string name="starts_short">"S:"</string>
+    <string name="ends_short">"E:"</string>
     <string name="no_forum_link">"No forum link yet"</string>
     <string name="refresh">Refresh</string>
     <string name="no_events">No Events</string>
