Added alert system
-Updated UI in main app
-Added notification stuff
-Added checkbox that sets alarm to use notification stuff
-Still needs testing
-Should move to content provider, right now the list doesn't update when
you check the checkbox

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,5 +12,9 @@
     <string name="no_forum_link">"No forum link yet"</string>
     <string name="refresh">Refresh</string>
     <string name="no_events">No Events</string>
+    <string name="competitive">Competitive</string>
+    <string name="signature">Signature</string>
+    <string name="fun">Fun</string>
+    <string name="starts_at">Starts at %1$s</string>
 
 </resources>
